--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <section id=main>
+  <link rel="stylesheet" type="text/css" href="css/default.css">
+  <title>レイアウト練習</title>
 </head>
 <body>
-
+<header>
+  <p>ヘッダー</p>  
+  <p>ヘッダー</p>
+  <p>ヘッダー</p>
+  </header>
+  <article id="main1">
+    <h1>本文１</h1>
+    <p>本文1</p>
+    <p>本文1</p>
+    <p>本文1</p>
+    </article>
+  <article id="main2">
+    <h1>本文２</h1>
+    <p>本文２</p>
+    <p>本文２</p>
+    <p>本文２</p>
+  </article>
+  <aside>
+    <p>サイドバー</p>
+    <p>サイドバー</p>
+    <p>サイドバー</p>
+    </aside>
+  <footer>
+    <p>フッター</p>
+    <p>フッター</p>
+    <p>フッター</p>
+    </footer>
  </body>
 </html>
