--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <p>ヘッダー</p>
   <p>ヘッダー</p>
   </header>
+  <section id="main">
+    <h1>本文</h1>
   <article id="main1">
     <h1>本文１</h1>
     <p>本文1</p>
@@ -23,6 +25,7 @@
     <p>本文２</p>
     <p>本文２</p>
   </article>
+    </section>
   <aside>
     <p>サイドバー</p>
     <p>サイドバー</p>
