--- a/index.html
+++ b/index.html
@@ -13,17 +13,27 @@
   </header>
   <section id="main">
     <h1>本文</h1>
-  <article id="main1">
+  <article class="box">
     <h1>本文１</h1>
     <p>本文1</p>
     <p>本文1</p>
     <p>本文1</p>
     </article>
-  <article id="main2">
+  <article class="box">
     <h1>本文２</h1>
     <p>本文２</p>
     <p>本文２</p>
     <p>本文２</p>
+  </article>
+     <article class="box">
+    <h1>本文3</h1>
+    <p>本文3</p>
+  </article>
+     <article class="box">
+    <h1>本文4</h1>
+    <p>本文4</p>
+    <p>本文4</p>
+    <p>本文4</p>
   </article>
     </section>
   <aside>
