--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
   </header>
   <section id="main">
     <h1>本文</h1>
+    <img id="good_picture" src="img/grade3_ganbarimashita.png" alt="good mark">
   <article class="box">
-    <h1>本文１</h1>
+    <h2>本文１</h2>
     <p>本文1</p>
     <p>本文1</p>
     <p>本文1</p>
     </article>
   <article class="box">
-    <h1>本文２</h1>
+    <h2>本文２</h2>
     <p>本文２</p>
     <p>本文２</p>
     <p>本文２</p>
   </article>
      <article class="box">
-    <h1>本文3</h1>
+    <h2>本文3</h2>
     <p>本文3</p>
   </article>
      <article class="box">
-    <h1>本文4</h1>
+    <h2>本文4</h2>
+    <p>本文4</p>
+    <p>本文4</p>
     <p>本文4</p>
     <p>本文4</p>
     <p>本文4</p>
