--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <section id="main">
     <h1>本文</h1>
-    <img id="good_picture" src="https://github.com/yuno0823/web1-7/blob/master/grade3_ganbarimashita.png" alt="good mark">
+    <img id="good_picture" src="grade3_ganbarimashita.png" alt="good mark">
   <article class="box">
     <h2>本文１</h2>
     <p>本文1</p>
